project(3000fps)
cmake_minimum_required(VERSION 2.8)
add_compile_options(-std=c++11)
message(STATUS "install prefix ${CMAKE_INSTALL_PREFIX}")
add_subdirectory(liblinear)
aux_source_directory(. LBFREGRESSOR_CPPS)
add_library(3000fps ${LBFREGRESSOR_CPPS})
target_link_libraries(3000fps liblinear)
#find_library(LIB liblineardd PATHS "${CMAKE_INSTALL_PREFIX}/lib/liblinear/")
#if(LIB)
#	message(STATUS "${LIB}")
#else(LIB)
#	message(STATUS "not found ${LIB}")
#endif(LIB)
#message(STATUS ${LIB})
#find_package(OpenCV)
#message(STATUS ${OpenCV_LIBRARIES})
#foreach(_var ${OpenCV_LIBRARIES})
#	message(STATUS "当前lib:${_var}")
#endforeach()
install(TARGETS 3000fps EXPORT 3000fps  ARCHIVE DESTINATION lib)
install(EXPORT 3000fps  DESTINATION share)
install(FILES LBF.h Tree.h LBFRegressor.h RandomForest.h  DESTINATION include)
#install(FILES 3000fpsConfig.cmake DESTINATION share/3000fps)
