project(DriverMonitor)
cmake_minimum_required(VERSION 2.8)
add_compile_options(-std=c++11)
add_definitions(-DCPU_ONLY)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-stack-protector")
set(CMAKE_BUILD_TYPE Debug)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
find_package(Caffe REQUIRED)
include_directories(${Caffe_DIR}/install/include)
aux_source_directory(. ALL_CPPS)
add_executable(DriverMonitor ${ALL_CPPS})
include(${CMAKE_INSTALL_PREFIX}/share/3000fps.cmake)
include(${CMAKE_INSTALL_PREFIX}/share/CaffeClassifier.cmake)
target_link_libraries(DriverMonitor 3000fps  CaffeClassifier config++ ${OpenCV_LIBRARIES}) 

