project(DriverMonitor)
cmake_minimum_required(VERSION 2.8)
add_compile_options(-std=c++11)
add_definitions(-DCPU_ONLY)
find_package(Caffe REQUIRED)
include_directories(${Caffe_DIR}/install/include)
aux_source_directory(. DRIVERMONITOR_CPPS)
add_executable(DriverMonitor ${DRIVERMONITOR_CPPS}) 
include(${CMAKE_INSTALL_PREFIX}/share/libfdd.cmake)
include(${CMAKE_INSTALL_PREFIX}/share/3000fps.cmake)
include(${CMAKE_INSTALL_PREFIX}/share/CaffeClassifier.cmake)
target_link_libraries(DriverMonitor libfdd)
