project(libfdd)
cmake_minimum_required(VERSION 2.8)
add_compile_options(-std=c++11)
add_definitions(-DCPU_ONLY -DWITH_SCREEN)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-stack-protector")
set(CMAKE_BUILD_TYPE Debug)
find_package(OpenCV REQUIRED)
if(${OpenCV_VERSION} STRLESS "3.2.0")
	add_definitions(-DOPENCV_LT_320)
	message(STATUS "OpenCV version lower than 3.2.0")
endif()
find_package(Caffe REQUIRED)
include_directories(${Caffe_DIR}/install/include)
aux_source_directory(. LIBFDD_CPPS)
add_library(libfdd ${LIBFDD_CPPS}) 
include(${CMAKE_INSTALL_PREFIX}/share/3000fps.cmake)
include(${CMAKE_INSTALL_PREFIX}/share/CaffeClassifier.cmake)
target_link_libraries(libfdd 3000fps  CaffeClassifier) 
install(TARGETS libfdd EXPORT libfdd ARCHIVE DESTINATION lib)
install(EXPORT libfdd DESTINATION share)
install(DIRECTORY . DESTINATION include FILES_MATCHING PATTERN "*.h" PATTERN "build" EXCLUDE)
