project(forwarder)
cmake_minimum_required(VERSION 2.8)
add_compile_options(-std=c++11)
add_definitions(-DWITH_SOUND)
aux_source_directory(. SRC_LIST)
add_library(MessageQueue MessageQueue.cpp Exception.cpp)
install(TARGETS MessageQueue ARCHIVE DESTINATION lib)
install(FILES MessageQueue.h Exception.h DESTINATION include)
add_library(TCPSocket TCPSocket.cpp Socket.cpp Exception.cpp)
add_library(Forwarder Forwarder.cpp)
target_link_libraries(Forwarder TCPSocket MessageQueue)
add_library(SensorDataServer SensorDataServer.cpp)
target_link_libraries(SensorDataServer TCPSocket)
add_executable(ExecuteForwarder ExecuteForwarder.cpp)
target_link_libraries(ExecuteForwarder Forwarder)
add_executable(ExecuteSensorDataServer ExecuteSensorDataServer.cpp)
target_link_libraries(ExecuteSensorDataServer SensorDataServer)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(ExecuteResultProcessor ExecuteResultProcessor.cpp ResultProcessor.cpp)
target_link_libraries(ExecuteResultProcessor MessageQueue ${OpenCV_LIBRARIES} config++ glog)
add_executable(TestResultProcessor TestResultProcessor.cpp)
target_link_libraries(TestResultProcessor MessageQueue ${OpenCV_LIBRARIES})
