project(forwarder)
cmake_minimum_required(VERSION 2.8)
add_compile_options(-std=c++11)
add_definitions(-DWITH_SOUND)
aux_source_directory(. SRC_LIST)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(ExecuteResultProcessor ExecuteResultProcessor.cpp ResultProcessor.cpp)
target_link_libraries(ExecuteResultProcessor MessageQueue ${OpenCV_LIBRARIES} config++ glog)
add_executable(TestResultProcessor TestResultProcessor.cpp)
target_link_libraries(TestResultProcessor MessageQueue ${OpenCV_LIBRARIES})
