project(3000fps)
cmake_minimum_required(VERSION 2.8)
add_compile_options(-std=c++11)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
message(STATUS "install prefix ${CMAKE_INSTALL_PREFIX}")
add_subdirectory(liblinear)
aux_source_directory(. LBFREGRESSOR_CPPS)
add_library(3000fps ${LBFREGRESSOR_CPPS})
target_link_libraries(3000fps liblinear ${OpenCV_LIBRARIES})
install(TARGETS 3000fps EXPORT 3000fps  ARCHIVE DESTINATION lib)
install(EXPORT 3000fps  DESTINATION share)
install(FILES LBF.h Tree.h LBFRegressor.h RandomForest.h  DESTINATION include)
#install(FILES 3000fpsConfig.cmake DESTINATION share/3000fps)
