project(CaffeClassifier)
cmake_minimum_required(VERSION 2.8)
find_package(Caffe REQUIRED)
include_directories(${Caffe_DIR}/install/include/)
aux_source_directory(. CAFFECLASSIFIER_CPPS)
add_library(CaffeClassifier ${CAFFECLASSIFIER_CPPS})
target_link_libraries(CaffeClassifier ${Caffe_LIBRARIES})
install(TARGETS CaffeClassifier EXPORT CaffeClassifier ARCHIVE DESTINATION lib)
install(EXPORT CaffeClassifier DESTINATION share)
install(FILES CaffeClassifier.h caffe_layers_registry.hpp DESTINATION include)
