add_definitions(-DCPU_ONLY)
if(WITH_SCREEN)
    add_definitions(-DWITH_SCREEN)
endif(WITH_SCREEN)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-stack-protector")
set(CMAKE_BUILD_TYPE Debug)
if(${OpenCV_VERSION} STRLESS "3.2.0")
	add_definitions(-DOPENCV_LT_320)
	message(STATUS "OpenCV version lower than 3.2.0")
endif()
aux_source_directory(. LIBFDD_CPPS)
add_library(libfdd SHARED ${LIBFDD_CPPS})
target_link_libraries(libfdd 3000fps  CaffeClassifier MessageQueue)
install(TARGETS libfdd LIBRARY DESTINATION lib)
