project(SplitImage)
cmake_minimum_required(VERSION 2.8)
aux_source_directory(. SRC_LIST)
find_package(OpenCV REQUIRED)
message(STATUS ${OpenCV_INCLUDE_DIRS})
message(STATUS ${OpenCV_LIBRARIES})
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(${PROJECT_NAME} ${SRC_LIST})
include(${CMAKE_INSTALL_PREFIX}/share/dm_global.cmake)
target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBRARIES} dm_global)
