project(test_headpose_model)
cmake_minimum_required(VERSION 2.8)
add_compile_options(-std=c++11)
find_package(OpenCV REQUIRED)
find_package(Caffe REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
include_directories(/home/lyfe667/caffe/build/install/include)
aux_source_directory(. ALL_CPPS)
add_executable(test_headpose_model ${ALL_CPPS})
target_link_libraries(test_headpose_model ${OpenCV_LIBRARIES} ${Caffe_LIBRARIES})
